--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td>
                 <h1>Charles Mashava</h1>
                 <p><em>Tech GeeK 😎</em></p>
-                <p><em>Future Network and Cyber Engineer</em></p>
+                <p><em>Future Network and Cyber Engineer 👨‍💻</em></p>
             </td>
         </tr>
     </table>
