--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>Social Media Account</h3>
-    <p><a href="https://www.facebook.com/chale.mashava" target="_blank">Facebook</a></p>
+    <p><a href="https://www.facebook.com/chale.mashava" target="_blank">Facebook</a>  |  <a href="https://www.linkedin.com/in/charles-mashava-1668b1232/" target="_blank">LinkedIn</a></p>
     <hr>
 
     <form action="mailto:charlesmashava5@gmail.com"   method="post" enctype="text/plain">
