--- a/index.html
+++ b/index.html
@@ -5,117 +5,137 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Site</title>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif; background-color: #f7f7f7; margin: 0; padding: 0;">
+
+    <!-- HEADER SECTION -->
+    <header style="background-color: #007acc; color: #fff; text-align: center; padding: 10px;">
+        <h1>Welcome to My Personal Site</h1>
+        <p>Explore my profile, achievements, and interests</p>
+    </header>
+
     <!-- TOP SECTION -->
-    <table cellspacing="30px">
+    <table cellspacing="30px" style="margin: 20px auto; max-width: 800px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); padding: 20px;">
         <tr>
             <td>
-                <img src="mypicture.jpg" width="200px" style="border-radius: 50%;">
+                <img src="images/mypicture.jpg" alt="My Profile Picture" width="200px" style="border-radius: 100%;">
             </td>
             <td>
                 <h1>Charles Mashava</h1>
                 <p><em>Tech GeeK 😎</em></p>
                 <p><em>Future Network and Cyber Engineer 👨‍💻</em></p>
+                <p><em>BsC in Computer Engineering Student</em></p>
             </td>
         </tr>
     </table>
     <hr>
 
     <!-- ABOUT ME SECTION -->
-    <h3>About Me</h3>
-    <p>Hello! I'm Charles Mashava, and I'm passionate about technology and engineering. I'm on a journey to become a network and cyber engineer, and I love exploring the latest trends in the tech world. Join me as I share my experiences and knowledge.</p>
+    <section>
+        <h2>About Me</h2>
+        <p>Hello! I'm Charles Mashava, and I'm passionate about technology and engineering. I'm on a journey to become a network and cyber engineer, and I love exploring the latest trends in the tech world. Join me as I share my experiences and knowledge.</p>
+    </section>
     <hr>
 
     <!-- EDUCATION SECTION -->
-    <h3>Education</h3>
-    <ul>
-        <li>Cisco Certified Network Specialist</li>
-        <li>BSc in Computer Engineering</li>
-    </ul>
+    <section>
+        <h2>Education</h2>
+        <ul>
+            <li>Cisco Certified Network Specialist</li>
+            <li>BSc in Computer Engineering</li>
+        </ul>
+    </section>
     <hr>
 
     <!-- WORK EXPERIENCE SECTION -->
-    <h3>Work Experience</h3>
-    <table cellspacing="10px">
-        <thead>
-            <tr>
-                <th>Dates</th>
-                <th>Work</th>
-                <th>Organization</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2019-2020</td>
-                <td>Personal Assistant</td>
-                <td>Optimus Dental</td>
-            </tr>
-            <tr>
-                <td>2020-2024</td>
-                <td>Student</td>
-                <td>DLSUD</td>
-            </tr>
-        </tbody>
-    </table>
+    <section>
+        <h2>Work Experience</h2>
+        <table cellspacing="10px">
+            <thead>
+                <tr>
+                    <th>Dates</th>
+                    <th>Work</th>
+                    <th>Organization</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2019-2020</td>
+                    <td>Personal Assistant</td>
+                    <td>Optimus Dental</td>
+                </tr>
+                <tr>
+                    <td>2020-2024</td>
+                    <td>Student</td>
+                    <td>DLSUD</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
     <hr>
 
     <!-- SKILLS SECTION -->
-    <h3>Skills</h3>
-    <table>
-        <tbody>
-            <tr>
-                <td>
-                    <table>
-                        <tr>
-                            <td>Computer Programming</td>
-                            <td>⭐⭐⭐⭐</td>
-                        </tr>
-                        <tr>
-                            <td>Network Configuration</td>
-                            <td>⭐⭐⭐⭐</td>
-                        </tr>
-                        <tr>
-                            <td>Hardware Engineering</td>
-                            <td>⭐⭐⭐⭐</td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table>
-                        <tr>
-                            <td>Driving Skills</td>
-                            <td>⭐⭐⭐⭐</td>
-                        </tr>
-                        <tr>
-                            <td>Social Skills</td>
-                            <td>⭐⭐⭐⭐</td>
-                        </tr>
-                        <tr>
-                            <td>Dancing</td>
-                            <td>⭐⭐⭐⭐</td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <section>
+        <h2>Skills</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <table>
+                            <tr>
+                                <td>Computer Programming</td>
+                                <td>⭐⭐⭐</td>
+                            </tr>
+                            <tr>
+                                <td>Network Configuration</td>
+                                <td>⭐⭐⭐⭐</td>
+                            </tr>
+                            <tr>
+                                <td>Hardware Engineering</td>
+                                <td>⭐⭐⭐⭐</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>
+                        <table>
+                            <tr>
+                                <td>Driving Skills</td>
+                                <td>⭐⭐⭐⭐</td>
+                            </tr>
+                            <tr>
+                                <td>Social Skills</td>
+                                <td>⭐⭐⭐⭐</td>
+                            </tr>
+                            <tr>
+                                <td>Dancing</td>
+                                <td>⭐</td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
     <hr>
 
     <!-- INTERESTS SECTION -->
-    <h3>Interests</h3>
-    <ul>
-        <li>Technology Trends</li>
-        <li>Athletics</li>
-        <li>Reading</li>
-        <li>Traveling</li>
-    </ul>
+    <section>
+        <h2>Interests</h2>
+        <ul>
+            <li>Technology Trends</li>
+            <li>Athletics</li>
+            <li>Reading</li>
+            <li>Traveling</li>
+        </ul>
+    </section>
     <hr>
 
     <!-- LINKS TO OTHER PAGES -->
-    <p>Check out my other pages:</p>
-    <ul>
-        <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="contacts.html">Contacts</a></li>
-    </ul>
+    <nav>
+        <h2>Explore More</h2>
+        <ul>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
